--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,9 @@
 
 # misc
 .DS_Store
+.idea
 *.pem
+scratch.py
 
 # debug
 npm-debug.log*
@@ -31,7 +33,7 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env*
+.env
 
 # vercel
 .vercel
