--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@maplibre/maplibre-gl-leaflet": "^0.1.3",
+    "framer-motion": "^12.23.22",
+    "leaflet": "^1.9.4",
+    "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "react-leaflet": "^5.0.0"
   }
 }
