--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-leaflet": "^5.0.0",
-    "resend": "^6.2.2"
+    "resend": "^6.2.2",
+    "web-push": "^3.6.7"
   }
 }
