--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@maplibre/maplibre-gl-leaflet": "^0.1.3",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.23.22",
     "leaflet": "^1.9.4",
     "next": "15.5.4",
