--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.9",
     "@maplibre/maplibre-gl-leaflet": "^0.1.3",
     "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.23.22",
@@ -18,6 +19,8 @@
     "react-dom": "19.1.0",
     "react-leaflet": "^5.0.0",
     "resend": "^6.2.2",
-    "web-push": "^3.6.7"
+    "web-push": "^3.6.7",
+    "workbox-core": "^7.3.0",
+    "workbox-precaching": "^7.3.0"
   }
 }
