--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@ducanh2912/next-pwa": "^10.2.9",
     "@maplibre/maplibre-gl-leaflet": "^0.1.3",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "framer-motion": "^12.23.22",
     "leaflet": "^1.9.4",
     "next": "15.5.4",
