--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "resend": "^6.2.2",
     "web-push": "^3.6.7",
     "workbox-core": "^7.3.0",
-    "workbox-precaching": "^7.3.0"
+    "workbox-expiration": "^7.3.0",
+    "workbox-precaching": "^7.3.0",
+    "workbox-routing": "^7.3.0",
+    "workbox-strategies": "^7.3.0"
   }
 }
